# opentouch-interface

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.py  todo.txt
.github/workflows/: flake8.yml  publish-to-test-pypi.yml
docs/: payload.md
examples/: access_data.py  demo.py  record_data.py
examples/config/: digit.yaml  digit360.yaml  gelsight.yaml  group.yaml
examples/ros/: README.md
examples/ros/src/touch_sensors/: package.xml  setup.cfg  setup.py
examples/ros/src/touch_sensors/touch_sensors/: publisher.py  subscriber.py
examples/simple/: demo.py
opentouch/core/: base_cnn.py  base_filter.py  base_model.py  base_nn.py  model_loader.py
opentouch_interface/: __init__.py  decoder.py  opentouch_interface.py  options.py  touch_sensor.py
opentouch_interface/core/: oti_config.py  payload.py  sensor_factory.py  sensor_group.py  sensor_group_saver.py
opentouch_interface/core/dataclasses/: buffer.py  nested_sensor_data.py  options.py
opentouch_interface/core/registries/: central_registry.py  class_registries.py  model_registry.py  (+2 more)
opentouch_interface/dashboard/: app.py  start.py
opentouch_interface/dashboard_v2/: base_viewer.py  digit_viewer.py  test.py
opentouch_interface/dataclasses/: image.py
opentouch_interface/interface/: opentouch_interface.py  options.py  touch_sensor.py
opentouch_interface/sensors/: digit.py  digit_sensor.py  file_sensor.py  gelsight_mini.py
samples/: demo.py
samples/config/: config.yaml
visualization/: viewer.py
visualization/outdated/: bug.py  old.py  widgets_test.py
(+103 files in other folders)
